mailpit/base/20-networkpolicy-allow-smtp-from-listmonk.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smtp-from-listmonk
  namespace: infra
spec:
  podSelector:
    matchLabels:
      app: mailpit
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: listmonk
          podSelector:
            matchLabels:
              app: listmonk
      ports:
        - protocol: TCP
          port: 1025
